--- a/FinalP.css
+++ b/FinalP.css
@@ -1,56 +1,58 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
-}
-* {
-    box-sizing: border-box;
-    color: purple;
-    text-align: center;
-}
-/* The background of all information */
-.container {
-    padding: 30px;
-    background-color: white;
-    width: 80%;
-    align: center;
-}
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: black;
+  }
+  * {
+      box-sizing: border-box;
+      color: purple;
+      text-align: center;
+  }
+  /* The background of all information */
+  .container {
+      padding: 30px;
+      background-color: white;
+      width: 45%;
+      position: absolute;
+      left: 335px;
+      top: 40px;
+  }
 
-/* Full-width input fields */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #d1d1e0;
+  /* Full-width input fields */
+  input[type=text], input[type=password] {
+      width: 100%;
+      padding: 15px;
+      margin: 5px 0 22px 0;
+      display: inline-block;
+      border: none;
+      background: #d1d1e0;
 
-}
+  }
 
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-}
+  input[type=text]:focus, input[type=password]:focus {
+      background-color: #ddd;
+      outline: none;
+  }
 
-/* Overwrite default styles of hr */
-hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 20px;
-}
+  /* Overwrite default styles of hr */
+  hr {
+      border: 1px solid #f1f1f1;
+      margin-bottom: 20px;
+  }
 
-}
+  }
 
-/* Set a style for the submit button */
-.registerb {
-    background-color: purple;
-    color: white;
-    padding: 16px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 80%;
-    opacity: 1;
-}
-/*Hover - when mouse on "register" = change of clearness (opacity)*/
-.registerb:hover {
-    opacity: 0.5;
-}
+  /* Set a style for the submit button */
+  .registerb {
+      background-color: purple;
+      color: white;
+      padding: 16px 20px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 80%;
+      opacity: 1;
+  }
+  /*Hover - when mouse on "register" = change of clearness (opacity)*/
+  .registerb:hover {
+      opacity: 0.5;
+  }
