--- a/FinalP.css
+++ b/FinalP.css
@@ -1,18 +1,31 @@
-body {
+body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
+    background-image: url("edmbg.jpg");
+
 }
+
 * {
     box-sizing: border-box;
     color: purple;
     text-align: center;
 }
+.top-left {
+  font-size: 35px;
+  font-family: "Times New Roman";
+  position: absolute;
+  top: 3px;
+  right: 700px;
+  color: white;
+
+}
 /* The background of all information */
 .container {
     padding: 30px;
     background-color: white;
-    width: 80%;
-    align: center;
+    width: 45%;
+    position: absolute;
+    left: 335px;
+    top: 40px;
 }
 
 /* Full-width input fields */
@@ -37,7 +50,6 @@ hr {
     margin-bottom: 20px;
 }
 
-}
 
 /* Set a style for the submit button */
 .registerb {
